wtx-macros-tests/tests/fail/incorrect_json_rpc_data_format.rs
#[wtx_macros::pkg(data_format(json_rpc(Bar)), id(Foo))]
mod pkg {
  #[pkg::req_data]
  struct Req;

  #[pkg::res_data]
  struct Res;
}

fn main() {
}
